--- a/views/admin/department/index.ejs
+++ b/views/admin/department/index.ejs
@@ -3,7 +3,7 @@
 <h1 class="h3 mb-2 text-gray-800"><%= title %></h1>
 <div>
     <a href="/admin/department/add/">
-        <button type="button" style="background: #007bff ; color: #ffffff; border-radius: 5px">Thêm mới</button>
+        <button type="button" class="btn btn-primary  btn-user ">Thêm mới</button>
     </a>
 </div>
 <div class="card shadow mb-4">
