--- a/views/admin/personal_newsletter/index.ejs
+++ b/views/admin/personal_newsletter/index.ejs
@@ -9,33 +9,40 @@
                 <tr>
                     <th>STT</th>
                     <th>Tên</th>
-                    <th>SĐT</th>
-                    <th>Phòng ban</th>
-                    <th>Mã nhân viên</th>
-                    <th>Email </th>
-                    <th>Địa chỉ </th>
-                    <th>Ngày sinh  </th>
-                    <th>Trạng thái</th>
+                    <th>Trang thái bài viết</th>
+                    <th>image album</th>
+                    <th>video album</th>
+                    <th>Tên album</th>
+                    <th>Bày tỏ cảm xúc </th>
+                    <th>Nội dung </th>
+                    <th>Tên người thích </th>
                 </tr>
                 </thead>
                 <tfoot>
                 <tr>
                     <th>STT</th>
                     <th>Tên</th>
-                    <th>SĐT</th>
-                    <th>Phòng ban</th>
-                    <th>Mã nhân viên</th>
-                    <th>Email </th>
-                    <th>Địa chỉ </th>
-                    <th>Ngày sinh  </th>
-                    <th>Trạng thái</th>
+                    <th>Trang thái bài viết</th>
+                    <th>image album</th>
+                    <th>video album</th>
+                    <th>Tên album</th>
+                    <th>Bày tỏ cảm xúc </th>
+                    <th>Nội dung </th>
+                    <th>Tên người thích </th>
                 </tr>
                 </tfoot>
                 <tbody>
                 <% personal_newslettern.forEach(function(item) { %>
                     <tr>
                         <td><%= item.id %></td>
-
+                        <td><%= item.user_id %></td>
+                        <td><%= item.privacy %></td>
+                        <td><%= item.image_album %></td>
+                        <td><%= item.video_alum %></td>
+                        <td><%= item.name_album %></td>
+                        <td><%= item.react %></td>
+                        <td><%= item.content %></td>
+                        <td><%= item.user_react %></td>
                     </tr>
                 <% }); %>
                 </tbody>
