--- a/views/admin/question/index.ejs
+++ b/views/admin/question/index.ejs
@@ -1,6 +1,11 @@
 <% include ../index1.ejs %>
 <!-- Page Heading -->
 <h1 class="h3 mb-2 text-gray-800"><%= title %></h1>
+<div>
+    <a href="/admin/question/add">
+        <button type="button" class="btn btn-primary  btn-user ">Thêm mới</button>
+    </a>
+</div>
 <div class="card shadow mb-4">
     <div class="card-body">
         <div class="table-responsive">
@@ -27,7 +32,10 @@
                         <td><%= item.id %></td>
                         <td><%= item.title_name %></td>
                         <td><%= item.name %></td>
-                        <td></td>
+                        <td><a href="/admin/question/edit/<%= item.id %>"><button type="button" class="btn btn-info  btn-user ">Sửa</button></a></form>
+                            <a href="javascript:void(0);" onclick="confirmDelete('/admin/question/delete/<%= item.id %>','<%= item.username %>')"
+                               class="bt"><button type="button" class="btn btn-danger  btn-user ">Xóa</button></a>
+                        </td>
                     </tr>
                 <% }); %>
                 </tbody>
@@ -36,3 +44,12 @@
     </div>
 </div>
 <% include ../index2.ejs %>
+<script>
+    function confirmDelete(url, catename) {
+        var conf = confirm(`Bạn có muốn xóa phòng ban? ${catename}`);
+        if (conf == true) {
+            window.location.href = url;
+        }
+    }
+
+</script>
