--- a/views/admin/system_bulletin/add.ejs
+++ b/views/admin/system_bulletin/add.ejs
@@ -1,25 +1,25 @@
 <% include ../index1.ejs %>
 <!-- Page Heading -->
-<h1 class="h3 mb-2 text-gray-800">Sửa lại</h1>
+<h1 class="h3 mb-2 text-gray-800">Thêm mới</h1>
 <div class="card shadow mb-4">
     <div class="row">
         <div class="col-lg-12">
             <div class="p-5">
-                <form class="user" action="/admin/department/edit_create/<%= edit_departmen.id %>" method="post">
+                <form class="user" action="/admin/system_bulletin/add-create/" method="post"   onsubmit="return validatedata()">
                     <div class="form-group row">
                         <div class="col-sm-2 mb-2 mb-sm-2">
                             <p>Phòng ban :</p>
                         </div>
                         <div class="col-sm-8 mb-8 mb-sm-8">
-                            <input type="text" class="form-control" name="name_department"
-                                   placeholder="Phòng ban" value="<%= edit_departmen.name_department %>">
+                            <input type="text" class="form-control" name="content"
+                                   placeholder="Phòng ban">
                         </div>
                     </div>
                     <div class="form-group row" >
                         <div class="col-sm-2 mb-2 mb-sm-2"></div>
                         <div class="col-sm-8 mb-8 mb-sm-8">
-                            <button type="submit" class="btn btn-primary btn-user">Sửa Lại</button>
-                            <a href="/admin/department/">
+                            <button type="submit" class="btn btn-primary btn-user">Thêm mới</button>
+                            <a href="/admin/system_bulletin/">
                                 <button type="button" class="btn btn-success  btn-user ">Quay Lại</button>
                             </a>
                         </div>
