--- a/views/admin/system_bulletin/edit.ejs
+++ b/views/admin/system_bulletin/edit.ejs
@@ -5,21 +5,21 @@
     <div class="row">
         <div class="col-lg-12">
             <div class="p-5">
-                <form class="user" action="/admin/department/edit_create/<%= edit_departmen.id %>" method="post">
+                <form class="user" action="/admin/system_bulletin/edit_create/<%= edit_new_post.id %>" method="post">
                     <div class="form-group row">
                         <div class="col-sm-2 mb-2 mb-sm-2">
                             <p>Phòng ban :</p>
                         </div>
                         <div class="col-sm-8 mb-8 mb-sm-8">
-                            <input type="text" class="form-control" name="name_department"
-                                   placeholder="Phòng ban" value="<%= edit_departmen.name_department %>">
+                            <input type="text" class="form-control" name="content"
+                                   placeholder="Phòng ban" value="<%= edit_new_post.content %>">
                         </div>
                     </div>
                     <div class="form-group row" >
                         <div class="col-sm-2 mb-2 mb-sm-2"></div>
                         <div class="col-sm-8 mb-8 mb-sm-8">
                             <button type="submit" class="btn btn-primary btn-user">Sửa Lại</button>
-                            <a href="/admin/department/">
+                            <a href="/admin/system_bulletin/">
                                 <button type="button" class="btn btn-success  btn-user ">Quay Lại</button>
                             </a>
                         </div>
