--- a/views/admin/system_bulletin/index.ejs
+++ b/views/admin/system_bulletin/index.ejs
@@ -1,6 +1,11 @@
 <% include ../index1.ejs %>
 <!-- Page Heading -->
 <h1 class="h3 mb-2 text-gray-800"><%= title %></h1>
+<div>
+    <a href="/admin/system_bulletin/add">
+        <button type="button" class="btn btn-primary  btn-user ">Thêm mới</button>
+    </a>
+</div>
 <div class="card shadow mb-4">
     <div class="card-body">
         <div class="table-responsive">
@@ -8,34 +13,42 @@
                 <thead>
                 <tr>
                     <th>STT</th>
-                    <th>Tên</th>
-                    <th>SĐT</th>
-                    <th>Phòng ban</th>
-                    <th>Mã nhân viên</th>
-                    <th>Email </th>
-                    <th>Địa chỉ </th>
-                    <th>Ngày sinh  </th>
-                    <th>Trạng thái</th>
+                    <th>Trang thái bài viết</th>
+                    <th>image album</th>
+                    <th>video album</th>
+                    <th>Tên album</th>
+                    <th>Bày tỏ cảm xúc </th>
+                    <th>Nội dung </th>
+                    <th>Tên người thích </th>
                 </tr>
                 </thead>
                 <tfoot>
                 <tr>
                     <th>STT</th>
-                    <th>Tên</th>
-                    <th>SĐT</th>
-                    <th>Phòng ban</th>
-                    <th>Mã nhân viên</th>
-                    <th>Email </th>
-                    <th>Địa chỉ </th>
-                    <th>Ngày sinh  </th>
-                    <th>Trạng thái</th>
+                    <th>Trang thái bài viết</th>
+                    <th>image album</th>
+                    <th>video album</th>
+                    <th>Tên album</th>
+                    <th>Bày tỏ cảm xúc </th>
+                    <th>Nội dung </th>
+                    <th>Tên người thích </th>
                 </tr>
                 </tfoot>
                 <tbody>
                 <% new_postn.forEach(function(item) { %>
                     <tr>
                         <td><%= item.id %></td>
-
+                        <td><%= item.privacy %></td>
+                        <td><%= item.image_album %></td>
+                        <td><%= item.video_alum %></td>
+                        <td><%= item.name_album %></td>
+                        <td><%= item.react %></td>
+                        <td><%= item.content %></td>
+                        <td><%= item.user_react %></td>
+                        <td><a href="/admin/system_bulletin/edit/<%= item.id %>"><button type="button" class="btn btn-info  btn-user ">Sửa</button></a></form>
+                            <a href="javascript:void(0);" onclick="confirmDelete('/admin/system_bulletin/delete/<%= item.id %>','<%= item.username %>')"
+                               class="bt"><button type="button" class="btn btn-danger  btn-user ">Xóa</button></a>
+                        </td>
                     </tr>
                 <% }); %>
                 </tbody>
@@ -44,3 +57,12 @@
     </div>
 </div>
 <% include ../index2.ejs %>
+<script>
+    function confirmDelete(url, catename) {
+        var conf = confirm(`Bạn có muốn xóa phòng ban? ${catename}`);
+        if (conf == true) {
+            window.location.href = url;
+        }
+    }
+
+</script>
