--- a/views/admin/user/index.ejs
+++ b/views/admin/user/index.ejs
@@ -16,6 +16,7 @@
                     <th>Địa chỉ </th>
                     <th>Ngày sinh  </th>
                     <th>Trạng thái</th>
+                    <th>Hành động</th>
                 </tr>
                 </thead>
                 <tfoot>
@@ -29,6 +30,7 @@
                     <th>Địa chỉ </th>
                     <th>Ngày sinh  </th>
                     <th>Trạng thái</th>
+                    <th>Hành động</th>
                 </tr>
                 </tfoot>
                 <tbody>
@@ -43,6 +45,10 @@
                         <td><%= item.address %></td>
                         <td><%= item.birthday %></td>
                         <td><%= item.status %></td>
+                        <td>
+                            <a href="javascript:void(0);" onclick="confirmDelete('/admin/department/delete/<%= item.id %>','<%= item.name_department %>')"
+                               class="bt"><button type="button" class="btn btn-info  btn-user ">Cập nhật</button></a>
+                        </td>
                     </tr>
                 <% }); %>
                 </tbody>
@@ -51,3 +57,12 @@
     </div>
 </div>
 <% include ../index2.ejs %>
+<script>
+    function confirmDelete(url, catename) {
+        var conf = confirm(`Bạn có muốn xóa phòng ban? ${catename}`);
+        if (conf == true) {
+            window.location.href = url;
+        }
+    }
+
+</script>
