--- a/views/admin/contacts/index.ejs
+++ b/views/admin/contacts/index.ejs
@@ -12,7 +12,7 @@
                     <th>Tên có trong danh bạ</th>
                     <th>SĐT</th>
                     <th>Người dùng cập nhật</th>
-                    <th>Hành động</th>
+<!--                    <th>Hành động</th>-->
                 </tr>
                 </thead>
                 <tfoot>
@@ -22,7 +22,7 @@
                     <th>Tên có trong danh bạ</th>
                     <th>SĐT</th>
                     <th>Người cập nhật</th>
-                    <th>Hành động</th>
+<!--                    <th>Hành động</th>-->
                 </tr>
                 </tfoot>
                 <tbody>
