--- a/views/admin/left.ejs
+++ b/views/admin/left.ejs
@@ -42,7 +42,7 @@
                 <div class="collapse-divider"></div>
                 <h6 class="collapse-header">Tài khoản :</h6>
                 <a class="collapse-item" href="/admin/user">Tài khoản người dùng</a>
-                <a class="collapse-item" href="/admin/admin">Tài khoản quản trịn viên</a>
+                <a class="collapse-item" href="/admin/admin">Tài khoản quản trị viên</a>
             </div>
         </div>
     </li>
