--- a/views/admin/system_bulletin/add.ejs
+++ b/views/admin/system_bulletin/add.ejs
@@ -11,8 +11,41 @@
                             <p>Phòng ban :</p>
                         </div>
                         <div class="col-sm-8 mb-8 mb-sm-8">
-                            <input type="text" class="form-control" name="content"
-                                   placeholder="Phòng ban">
+                            <textarea class="form-control" name="content" rows="2"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-2 mb-2 mb-sm-2">
+                            <p>Trạng thái bài viết :</p>
+                        </div>
+                        <div class="col-sm-8 mb-8 mb-sm-8">
+                            <select name="privacy">
+                                <option value="3">Công Khai</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-2 mb-2 mb-sm-2">
+                            <p>Upload Ảnh :</p>
+                        </div>
+                        <div class="col-sm-8 mb-8 mb-sm-8">
+                            <input type="file"  name="image_album"required/>
+<!--                            <div>-->
+<!--                                <label for="">Upload a Image</label>-->
+<!--                                <br>-->
+<!--                                -->
+<!--                            </div>-->
+<!--                            <input type="text" class="form-control" name="image_album"-->
+<!--                                   placeholder="Phòng ban">-->
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-2 mb-2 mb-sm-2">
+                            <p>Video :</p>
+                        </div>
+                        <div class="col-sm-8 mb-8 mb-sm-8">
+                            <input type="text" class="form-control" name="video_alum"
+                                   placeholder="Phòng ban" >
                         </div>
                     </div>
                     <div class="form-group row" >
