--- a/views/admin/system_bulletin/edit.ejs
+++ b/views/admin/system_bulletin/edit.ejs
@@ -8,14 +8,41 @@
                 <form class="user" action="/admin/system_bulletin/edit_create/<%= edit_new_post.id %>" method="post">
                     <div class="form-group row">
                         <div class="col-sm-2 mb-2 mb-sm-2">
-                            <p>Phòng ban :</p>
+                            <p>Nội dung bài viết :</p>
                         </div>
                         <div class="col-sm-8 mb-8 mb-sm-8">
-                            <input type="text" class="form-control" name="content"
-                                   placeholder="Phòng ban" value="<%= edit_new_post.content %>">
+                            <textarea class="form-control" name="content" rows="2"><%= edit_new_post.content %></textarea>
                         </div>
                     </div>
-                    <div class="form-group row" >
+                    <div class="form-group row">
+                        <div class="col-sm-2 mb-2 mb-sm-2">
+                            <p>Trạng thái bài viết :</p>
+                        </div>
+                        <div class="col-sm-8 mb-8 mb-sm-8">
+                            <select name="privacy">
+                                <option value="3">Công Khai</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-2 mb-2 mb-sm-2">
+                            <p>Ảnh :</p>
+                        </div>
+                        <div class="col-sm-8 mb-8 mb-sm-8">
+                            <input type="text" class="form-control" name="image_album"
+                                   placeholder="Phòng ban" value="<%= edit_new_post.image_album %>">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-2 mb-2 mb-sm-2">
+                            <p>Video :</p>
+                        </div>
+                        <div class="col-sm-8 mb-8 mb-sm-8">
+                            <input type="text" class="form-control" name="video_alum"
+                                   placeholder="Phòng ban" value="<%= edit_new_post.video_alum %>">
+                        </div>
+                    </div>
+                    <div class="form-group row">
                         <div class="col-sm-2 mb-2 mb-sm-2"></div>
                         <div class="col-sm-8 mb-8 mb-sm-8">
                             <button type="submit" class="btn btn-primary btn-user">Sửa Lại</button>
